# medusa

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pages-static-html.yml  python-package.yml  python-tests.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: medusa_512.xcf
docs/source/reference/: corrections.constraints.rst  corrections.rst  data.rst  dynamics.crtbp.rst  dynamics.lowthrust.crtbp.rst  dynamics.lowthrust.rst  dynamics.rst  index.rst  numerics.rst  propagate.rst  units.rst  util.rst
examples/: earthMoonHalo.py  ltLyap.py  plot_shooterOutput.py  sunEarthHalo.py
medusa/: __init__.py  crtbp.py  data.py  dynamics.py  numerics.py  plots.py  propagate.py  typing.py  units.py  util.py
medusa/corrections/: __init__.py  constraints.py
medusa/dynamics/: __init__.py  crtbp.py
medusa/dynamics/lowthrust/: __init__.py  crtbp.py
medusa/lowthrust/: __init__.py  control.py  dynamics.py
pika/: __init__.py  crtbp.py  data.py  dynamics.py  numerics.py  plots.py  propagate.py  util.py
pika/corrections/: __init__.py  constraints.py  corrections.py
pika/dynamics/: __init__.py  crtbp.py  dynamics.py
pika/lowthrust/: __init__.py  control.py  dynamics.py
resources/: body-data.xml
tests/: conftest.py  test_body.py  test_constraints.py  test_corrections-constraints.py  test_corrections.py  test_crtbp.py  test_data.py  test_dynamics-crtbp.py  test_dynamics-lowthrust-crtbp.py  test_dynamics-lowthrust.py  test_dynamics.py  test_dynamics_crtbp.py  test_dynamics_lowthrust.py  test_dynamics_lowthrust_crtbp.py  test_lowthrust.py  test_numerics.py  test_propagate.py  test_util.py
