# Project Configuration
# ------------------------------------------------------------------------------
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# -------------------------------------
# Project metadata
[project]
name = "medusa"
version = "0.0.2"
description = "Tools for multi-body astrodynamics research"
license = {file = "license.txt"}
keywords = ["astrodynamics", "dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
authors = [
    {name="Andrew Cox", email="andrewdcox10@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy>=1.21",
    "numba",
    "scipy",
    "rich",
    "overrides; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black>=23.1.0",
    "pre-commit==2.13.0",
    "isort>=5.12.0",
    "sphinx",
    "pydata-sphinx-theme",
]
test = [
    "mypy",
    "pytest>=6.2.4",
    "pytest-mock",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/adcox/medusa"
"Bug Reports" = "https://github.com/adcox/medusa/issues"
"Source" = "https://github.com/adcox/medusa"


# -------------------------------------
# Tools
[tool.setuptools]
packages = [
    "medusa", 
    "medusa.corrections", 
    "medusa.dynamics",
    "medusa.dynamics.lowthrust",
]

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    # List in order of increasing complexity
    "tests/test_util.py",
    "tests/test_numerics.py",
    "tests/test_data.py",
    "tests/test_dynamics.py",
    "tests/test_dynamics-crtbp.py",
    "tests/test_propagate.py",
    "tests/test_dynamics-lowthrust.py",
    "tests/test_dynamics-lowthrust-crtbp.py",
    "tests/test_corrections.py",
    "tests/test_corrections-constraints.py",
    "tests",    # catch-all
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '''
medusa/\.py?$
tests/\.py?$
'''

[tool.isort]
profile = "black"
extend_skip = ["env"]
force_to_top = ["os", "sys"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true
